<resources>
    <string name="app_name">Orgs</string>

    <string name="lista_produtos_title">Lista de produtos</string>
    <string name="cadastrar_produto_title">Novo produto</string>
    <string name="editar_produto_title">Editar produto</string>
    <string name="detalhes_produto_title">Detalhes do produto</string>
    <string name="perfil_usuario_title">Perfil do usuário</string>

    <string name="hint_usuario_usuario">Usuário (Email)</string>
    <string name="hint_nome_usuario">Nome</string>
    <string name="hint_senha_usuario">Senha</string>

    <string name="hint_titulo_produto">Título</string>
    <string name="hint_descricao_produto">Descrição</string>
    <string name="hint_valor_produto">Valor</string>

    <string name="text_btn_entrar">Entrar</string>
    <string name="text_btn_cadastrar_usuario">Cadastrar usuário</string>
    <string name="text_btn_cadastrar">Cadastrar</string>
    <string name="text_btn_salvar">Salvar</string>
    <string name="text_btn_sair">Sair</string>

    <string name="hint_img_url">URL da imagem</string>

    <string name="text_fab_novo_produto">Novo produto</string>

    <string name="option_produtos_usuarios_title">Produtos dos Usuários</string>
    <string name="option_perfil_title">Perfil</string>
    <string name="option_editar_title">Editar</string>
    <string name="option_excluir_title">Excluir</string>

    <string-array name="property_filter_options">
        <item>Título</item>
        <item>Descrição</item>
        <item>Valor</item>
        <item>Nenhum</item>
    </string-array>

    <string-array name="ordering_filter_options">
        <item>Crescente</item>
        <item>Decrescente</item>
    </string-array>
</resources>
