<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cadastro_produto_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".ui.modules.cadastro_produto.CadastroProdutoActivityImpl">

        <ImageView
            android:id="@+id/cadastro_produto_item_image"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/imagem_padrao" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cadastro_produto_layout_titulo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/hint_titulo_produto"
            android:inputType="text"
            android:minHeight="48dp"
            app:helperText="Obrigatório"
            app:helperTextEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cadastro_produto_item_image">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cadastro_produto_field_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cadastro_produto_layout_descricao"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_descricao_produto"
            android:inputType="text"
            android:minHeight="48dp"
            app:helperText="Obrigatório"
            app:helperTextEnabled="true"
            app:layout_constraintEnd_toEndOf="@id/cadastro_produto_layout_titulo"
            app:layout_constraintStart_toStartOf="@id/cadastro_produto_layout_titulo"
            app:layout_constraintTop_toBottomOf="@id/cadastro_produto_layout_titulo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cadastro_produto_field_descricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cadastro_produto_layout_valor"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/hint_valor_produto"
            android:inputType="text"
            android:minHeight="48dp"
            app:helperText="Obrigatório"
            app:helperTextEnabled="true"
            app:layout_constraintEnd_toEndOf="@id/cadastro_produto_layout_descricao"
            app:layout_constraintStart_toStartOf="@id/cadastro_produto_layout_titulo"
            app:layout_constraintTop_toBottomOf="@id/cadastro_produto_layout_descricao"
            app:prefixText="R$ ">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cadastro_produto_field_valor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/cadastro_produto_btn_salvar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_btn_salvar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/cadastro_produto_layout_valor"
            app:layout_constraintStart_toStartOf="@id/cadastro_produto_layout_titulo"
            app:layout_constraintTop_toBottomOf="@+id/cadastro_produto_layout_valor" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
